fixed loading screen not covering all the page

--- a/frontend/Content/mystyles.css
+++ b/frontend/Content/mystyles.css
@@ -1,7 +1,8 @@
-﻿﻿body {
+body {
     font-family: 'Montserrat', sans-serif;
     background-color: darkslategray;
     color: white;
+    height: 100%;
     min-width: 640px;
 }
 
@@ -59,7 +60,7 @@ thead tr th {
 
 #loading-screen {
     left: 0;
-    top: 130px;
+    top: 120px;
     width: 100%;
     height: 100%;
     background: #2f4f4f;
@@ -127,7 +128,7 @@ thead tr th {
     }
 }
 
-@media screen and (max-width: 1000px) {
+@media only screen and (max-width: 1000px) {
     .container {
       width: 100%;
       max-width: none;
